# SkillPractice

./: db.sqlite3  pyproject.toml
SkilPractice/: LICENSE  apps.py  views.py
practice_project/: settings.py  urls.py
